tests/build/cases/widget/not_allowed_in_when6.stderr
error: property `foo` is not allowed in when
  --> cases/widget/not_allowed_in_when6.rs:22:13
   |
22 |             foo<bool> = true;
   |             ^^^
